# website

./: .env.example  .gitignore  Cargo.toml  DOCKER_SETUP.md  Dockerfile  Untitled-1.txt  compose.yml  dict.txt  docker-compose.yml  run-front.cmd  task.md  word_item.json
.claude/: settings.local.json
.github/workflows/: ci.yml  docker-build.yml  release.yml
backend/: .gitignore  Dockerfile
backend/migrations/00000000000000_init/: down.sql
backend/src/: config.rs  main.rs  models.rs
backend/src/hoops/: mod.rs
backend/src/routing/: mod.rs
crates/server/: Cargo.toml  Dockerfile  diesel.toml
crates/server/migrations/00000000000000_init/: up.sql
crates/server/migrations/00000000000001_authz_oauth/: down.sql  up.sql
crates/server/migrations/00000000000002_asset_tables/: up.sql
crates/server/migrations/00000000000002_learn_tables/: up.sql
crates/server/migrations/00000000000002_learning_content/: down.sql  up.sql
crates/server/migrations/00000000000003_learn_seed/: up.sql
crates/server/migrations/00000000000004_learn_tables/: up.sql
crates/server/migrations/00000000000005_learn_seed/: up.sql
crates/server/migrations/00000000000006_dict_tables/: down.sql  up.sql
crates/server/migrations/00000000000007_dict_searched_words/: up.sql
crates/server/migrations/00000000000007_dict_seed/: down.sql  up.sql
crates/server/migrations/00000000000008_achievement_system/: down.sql  up.sql
crates/server/migrations/00000000000009_dict_seed/: down.sql  up.sql
crates/server/migrations/00000000000010_scene_tables/: down.sql  up.sql
crates/server/migrations/00000000000011_scene_seed/: down.sql  up.sql
crates/server/migrations/00000000000011_stage_seed/: down.sql  up.sql
crates/server/migrations/00000000000012_conversation_history/: down.sql  up.sql
crates/server/migrations/00000000000012_review_seed/: down.sql  up.sql
crates/server/src/: auth.rs  config.rs  db.rs  error.rs  global.rs  hoops.rs  lib.rs  macros.rs  main.rs  models.rs  oauth.rs  routing.rs  user.rs  utils.rs  wallet.rs
crates/server/src/db/: config.rs  full_text_search.rs  pool.rs  schema.rs
crates/server/src/dealing/: auth.rs  user.rs  wallet.rs
crates/server/src/dealing/user/: avatar.rs  data.rs  device.rs  external_id.rs  profile.rs  refresh_token.rs  session.rs
crates/server/src/hoops/: auth.rs  state_hoop.rs
crates/server/src/models/: achievement.rs  asset.rs  auth.rs  base.rs  chat.rs  dict.rs  learn.rs  learning.rs  oauth.rs  user.rs  wallet.rs
crates/server/src/permission/: creatives.rs  macros.rs  realms.rs  stewards.rs  stock.rs  trade_orders.rs  trade_refunds.rs  users.rs
crates/server/src/routing/: account.rs  achievement.rs  asset.rs  auth.rs  chat.rs  dict.rs  home.rs  learn.rs  learning.rs  oauth.rs  operation.rs  role.rs  routes.rs  user.rs  voice_chat.rs  wallet.rs
crates/server/src/routing/account/: access_token.rs  avatar.rs  email.rs  email_subscription.rs  interflow.rs  notification.rs  oauth.rs  phone.rs  share_link.rs  track.rs
crates/server/src/routing/asset/: context.rs  reading.rs  script.rs  stage.rs  taxonomy.rs
crates/server/src/routing/dict/: antonyms.rs  categories.rs  category.rs  collocations.rs  definition.rs  definitions.rs  dictionaries.rs  dictionary.rs  etymology.rs  examples.rs  family.rs  form.rs  forms.rs  image.rs  images.rs  phrases.rs  pronunciation.rs  pronunciations.rs  related_topics.rs  relation.rs  searched_words.rs  sentence.rs  synonyms.rs  usage_notes.rs  word_dictionaries.rs  words.rs
crates/server/src/routing/learn/: achievement.rs  chat.rs  daily_stat.rs  issue_word.rs  practice.rs  reset.rs  suggestion.rs  summary.rs  vocabulary.rs
crates/server/src/routing/role/: permission.rs  user.rs
crates/server/src/routing/user/: access_token.rs  avatar.rs  email.rs  email_subscription.rs  permission.rs  phone.rs  share_link.rs
crates/server/src/routing/wallet/: balance.rs  history.rs  obtained_coupon.rs  used_coupon.rs
crates/server/src/services/: ai_provider.rs  bigmodel.rs  doubao.rs  mod.rs  zhipu.rs
crates/server/src/user/: access_token.rs  avatar.rs  data.rs  device.rs
crates/server/src/utils/: content_disposition.rs  hash.rs
front/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
front/src/: App.tsx  index.css
front/src/components/: AvatarCropDialog.tsx  Footer.tsx  Header.tsx  OAuthButton.tsx
front/src/components/ui/: card.tsx  dropdown-menu.tsx  label.tsx  textarea.tsx
front/src/lib/: api.ts  audio.ts  auth.tsx  oauth-config.ts
front/src/pages/: AuthSuccessPage.tsx  AuthorizePage.tsx  ChatPage.tsx  ConversationPage.tsx  DesktopAuthorizePage.tsx  DictPage.tsx  FeedbackPage.tsx  HomePage.tsx  LandingPage.tsx  MePage.tsx  PrivacyPage.tsx  ReadingPage.tsx  ReviewPage.tsx  ReviewSessionPage.tsx  SceneDetailPage.tsx  ScenesPage.tsx  StageDetailPage.tsx  StagesPage.tsx  TermsPage.tsx
front/src/widgets/: AuthCard.tsx  ChatPanel.tsx  ProfilePanel.tsx  RecordsPanel.tsx
frontend/: README.md  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/ui/: button.tsx  input.tsx  tabs.tsx
frontend/src/lib/: api.ts  auth.tsx
frontend/src/widgets/: ProfilePanel.tsx  RecordsPanel.tsx
