[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.92.0"


[workspace.dependencies]
colang-macros = { version = "0.1.0", path = "crates/macros" }

argon2 = "0.5.3"
rust-argon2 = "3.0.0"
ctor = "0.6.3"
anyhow = "1.0.100"
assert_matches2 = "0.1.0"
async-trait = "0.1.89"
as_variant = "1.3.0"
base64 = "0.22"
bcrypt = "0.18.0"
blurhash = "0.2"
bytes = "1.11.0"
byteorder = "1.5.0"
cargo_toml = "0.22.3"
chksum = "0.4.0"
chrono = { version = "0.4.42", features = ["serde"] }
config = "0.15.19"
cookie = "0.18.0"
core_affinity = "0.8.3"
cyborgtime = "2.1.1"
data-encoding = "2.5.0"
date_header = "1.0.5"
diesel = { version = "2.3.5" }
# diesel-async = { version = "0.6.1" }
# diesel_full_text_search = { version = "2.2.0" }
diesel_migrations = "2.3.1"
dotenvy = "0.15.0"
ed25519-dalek = "2.2.0"
either = { version = "1.15.0", default-features = false }
fast32 = "1.0.3"
figment = "0.10.8"
futures-util = { version = "0.3.24", features = ["io"] }
form_urlencoded = "1"
globwalk = "0.9.0"
hex = "0.4.3"
ipaddress = "0.1.3"
hickory-resolver = "0.25.1"
hyper-util = "0.1.19"
hmac = "0.12"
http = "1.4.0"
image = "0.25.9"
indexmap = "2.12.1"
itertools = "0.14.0"
jsonwebtoken = { version = "10.2.0", default-features = false, features = [
    "use_pem", "aws_lc_rs"
] }
language-tags = { version = "0.3.2", features = ["serde"] }
lru-cache = "0.1.2"
maplit = "1.0.2"
mime = "0.3.16"
mime-infer = "4.0.1"
# nix = "0.26.1"
outfox-doubao = { git = "https://github.com/outfox-ai/outfox.git", branch = "next", features = ["full"] }
outfox-zhipu = { git = "https://github.com/outfox-ai/outfox.git", branch = "next", features = ["full"] }
path-slash = "0.2.1"
percent-encoding = "2"
phf = { version = "0.13.1", features = ["macros"] }
pkcs8 = "0.10.2"
proc-macro-crate = "3.4.0"
proc-macro2 = "1.0.103"
pulldown-cmark = { version = "0.13.0", default-features = false }
quote = "1.0.42"
rand = "0.9.2"
rustyline-async = { version = "0.4.7" }
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["json"] }
ring = "0.17.14"
salvo = { version = "0.89.0" }
sanitize-filename = "0.6.0"
scheduled-thread-pool = "0.2.0"
secrecy = "0.10.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.146" }
smallvec = { version = "1.15.1" }
sha2 = "0.10.8"
sha1 = "0.10.6"
strum = "0.27.2"
strum_macros = "0.27.2"
subslice = "0.2.3"
tempfile = "3.23.0"
termimad = { version = "0.34.1", default-features = false }
textnonce = "1.0.0"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.9", features = ["sync"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
tokio-util = { version = "0.7.17", features = ["io"] }
toml = { version = "0.9.8", default-features = false }
tracing = { version = "0.1.44", features = [
    "release_max_level_debug",
    "attributes",
    "max_level_debug",
] }
tracing-core = { version = "0.1.36" }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
url = { version = "2.5.4", default-features = false, features = ["serde"] }
uuid = { version = "1.19.0", features = ["serde", "v4", "v7"] }
ulid = "1.1.0"
web-time = "1.1.0"
webpage = { version = "2.0.1", default-features = false }
wildmatch = "2.6.1"

[workspace.lints.clippy]
result_large_err = "allow"
type_complexity = "allow"
too_many_arguments = "allow"
large_enum_variant = "allow"

[profile.release]
codegen-units = 1
lto = true
