[package]
name = "colang"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
argon2 = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true, features = ["postgres", "r2d2", "chrono", "uuid", "serde_json"] }
diesel_migrations = { workspace = true }
dotenvy = { workspace = true }
hex = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
salvo = { workspace = true, features = ["cors", "logging", "oapi"] }
scheduled-thread-pool = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
thiserror = { workspace = true }
tracing = { workspace = true }
byteorder = { workspace = true }