[package]
name = "colang"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
default-run = "colang"

[[bin]]
name = "import_dict"
path = "src/bin/import_dict.rs"

[[bin]]
name = "words"
path = "src/bin/words.rs"

[[bin]]
name = "words_to_db"
path = "src/bin/words_to_db.rs"

[dependencies]
argon2 = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true, features = ["postgres", "r2d2", "chrono", "uuid", "serde_json"] }
diesel_migrations = { workspace = true }
dotenvy = { workspace = true }
figment = { workspace = true, features = ["env", "toml", "yaml", "json"] }
hex = { workspace = true }
itertools = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
salvo = { workspace = true, features = ["cors", "logging", "oapi", "compression", "rustls"] }
scheduled-thread-pool = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
thiserror = { workspace = true }
tracing = { workspace = true }
byteorder = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }